feature : after creating notification service realted changes and code